RTI-424 - fixed icons on IE

--- a/grid-packages/ag-grid-docs/documentation/src/components/search/SearchBox.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/components/search/SearchBox.module.scss
@@ -16,6 +16,11 @@
     &__icon {
         composes: ml-2 from global;
 
+        @media all and (-ms-high-contrast:none) { // IE 11 
+            top: 0.75rem;
+            left: 0px;
+        }
+
         position: absolute;
     }
 }
